--- a/rida.html
+++ b/rida.html
@@ -41,11 +41,6 @@
       z-index: -1;
     }
 
-    @keyframes fadeInUp {
-      0% { opacity: 0; transform: translateY(40px); }
-      100% { opacity: 1; transform: translateY(0); }
-    }
-
     header {
       background-color: #fff;
       padding: 1.2rem 2rem;
@@ -56,6 +51,7 @@
       position: sticky;
       top: 0;
       z-index: 1000;
+      flex-wrap: wrap;
     }
 
     header h1 {
@@ -64,12 +60,18 @@
       color: var(--primary);
     }
 
+    nav {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+    }
+
     nav a {
-      margin-left: 1.5rem;
       text-decoration: none;
       color: var(--dark);
       font-weight: 500;
       position: relative;
+      font-size: 1rem;
     }
 
     nav a::after {
@@ -90,13 +92,12 @@
     .hero {
       background: linear-gradient(to bottom right, #fffaf4, #f7f3ec);
       padding: 6rem 2rem;
-      animation: fadeInUp 1s ease forwards;
       position: relative;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
       justify-content: center;
-      max-width: 4000px;
+      max-width: 1200px;
       margin: 0 auto;
     }
 
@@ -106,20 +107,17 @@
       font-family: 'Playfair Display', serif;
       margin-bottom: 1rem;
       text-align: left;
-      margin-left: 1rem;
     }
 
     .hero p {
       color: #555;
       font-size: 1.2rem;
       max-width: 600px;
-      margin-left: 1rem;
       text-align: left;
     }
 
     .cta {
       margin-top: 2rem;
-      margin-left: 1rem;
       background-color: var(--primary);
       color: white;
       border: none;
@@ -152,7 +150,7 @@
       position: absolute;
       right: 2rem;
       bottom: 0;
-      max-width: 900px; /* Increased size */
+      max-width: 50%;
       opacity: 0.95;
       z-index: 0;
     }
@@ -160,7 +158,6 @@
     .section {
       padding: 4rem 2rem;
       background-color: var(--accent);
-      animation: fadeInUp 1s ease forwards;
     }
 
     .section:nth-child(even) {
@@ -190,7 +187,6 @@
       flex: 1 1 260px;
       text-align: center;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
-      animation: fadeInUp 1s ease forwards;
     }
 
     .feature:hover {
@@ -221,13 +217,60 @@
       text-decoration: underline;
     }
 
+    /* Mobile Responsive Styles */
     @media (max-width: 768px) {
-      .features {
+      header {
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
       }
+
+      nav {
+        width: 100%;
+        justify-content: flex-start;
+        margin-top: 1rem;
+      }
+
+      .hero {
+        align-items: center;
+        text-align: center;
+      }
+
+      .hero h2,
+      .hero p {
+        margin-left: 0;
+        text-align: center;
+      }
+
+      .cta {
+        margin-left: 0;
+      }
+
       .hero img.overlay {
         display: none;
+      }
+
+      .features {
+        flex-direction: column;
+        align-items: stretch;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .hero h2 {
+        font-size: 2rem;
+      }
+
+      .hero p {
+        font-size: 1rem;
+      }
+
+      .cta {
+        font-size: 0.9rem;
+        padding: 0.6rem 1.5rem;
+      }
+
+      .section h3 {
+        font-size: 1.5rem;
       }
     }
   </style>
