--- a/rida.html
+++ b/rida.html
@@ -41,6 +41,11 @@
       z-index: -1;
     }
 
+    @keyframes fadeInUp {
+      0% { opacity: 0; transform: translateY(40px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+
     header {
       background-color: #fff;
       padding: 1.2rem 2rem;
@@ -51,7 +56,6 @@
       position: sticky;
       top: 0;
       z-index: 1000;
-      flex-wrap: wrap;
     }
 
     header h1 {
@@ -60,18 +64,12 @@
       color: var(--primary);
     }
 
-    nav {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
-    }
-
     nav a {
+      margin-left: 1.5rem;
       text-decoration: none;
       color: var(--dark);
       font-weight: 500;
       position: relative;
-      font-size: 1rem;
     }
 
     nav a::after {
@@ -92,12 +90,13 @@
     .hero {
       background: linear-gradient(to bottom right, #fffaf4, #f7f3ec);
       padding: 6rem 2rem;
+      animation: fadeInUp 1s ease forwards;
       position: relative;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
       justify-content: center;
-      max-width: 1200px;
+      max-width: 4000px;
       margin: 0 auto;
     }
 
@@ -107,17 +106,20 @@
       font-family: 'Playfair Display', serif;
       margin-bottom: 1rem;
       text-align: left;
+      margin-left: 1rem;
     }
 
     .hero p {
       color: #555;
       font-size: 1.2rem;
       max-width: 600px;
+      margin-left: 1rem;
       text-align: left;
     }
 
     .cta {
       margin-top: 2rem;
+      margin-left: 1rem;
       background-color: var(--primary);
       color: white;
       border: none;
@@ -150,7 +152,9 @@
       position: absolute;
       right: 2rem;
       bottom: 0;
-      max-width: 50%;
+      width: 50vw;            /* Responsive width */
+      max-width: 500px;       /* Prevents from going too large */
+      height: auto;
       opacity: 0.95;
       z-index: 0;
     }
@@ -158,6 +162,7 @@
     .section {
       padding: 4rem 2rem;
       background-color: var(--accent);
+      animation: fadeInUp 1s ease forwards;
     }
 
     .section:nth-child(even) {
@@ -187,6 +192,7 @@
       flex: 1 1 260px;
       text-align: center;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
+      animation: fadeInUp 1s ease forwards;
     }
 
     .feature:hover {
@@ -217,60 +223,27 @@
       text-decoration: underline;
     }
 
-    /* Mobile Responsive Styles */
     @media (max-width: 768px) {
-      header {
+      .features {
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
       }
-
-      nav {
-        width: 100%;
-        justify-content: flex-start;
-        margin-top: 1rem;
-      }
-
       .hero {
         align-items: center;
         text-align: center;
       }
-
-      .hero h2,
-      .hero p {
-        margin-left: 0;
-        text-align: center;
-      }
-
-      .cta {
+      .hero h2, .hero p, .cta {
         margin-left: 0;
       }
-
       .hero img.overlay {
         display: none;
       }
-
-      .features {
-        flex-direction: column;
-        align-items: stretch;
-      }
     }
 
-    @media (max-width: 480px) {
-      .hero h2 {
-        font-size: 2rem;
-      }
-
-      .hero p {
-        font-size: 1rem;
-      }
-
-      .cta {
-        font-size: 0.9rem;
-        padding: 0.6rem 1.5rem;
-      }
-
-      .section h3 {
-        font-size: 1.5rem;
+    @media (min-width: 769px) and (max-width: 1024px) {
+      .hero img.overlay {
+        width: 40vw;
+        max-width: 400px;
       }
     }
   </style>
