--- a/rida.html
+++ b/rida.html
@@ -152,12 +152,13 @@
       position: absolute;
       right: 2rem;
       bottom: 0;
-      width: 50vw;            /* Responsive width */
-      max-width: 500px;       /* Prevents from going too large */
+      max-width: 900px;
+      width: 45vw;
       height: auto;
       opacity: 0.95;
       z-index: 0;
     }
+
 
     .section {
       padding: 4rem 2rem;
